# carteira-investimento

./: .gitignore  CHANGELOG.md  README.md  package.json
backend/: pyproject.toml  run_desktop.py
backend/app/: desktop.py  main.py
backend/app/api/: analysis.py  assets.py  budget.py  crypto_fees.py  data.py  dividend_payments.py  fx.py  info.py  objectives.py  patrimony_control.py  (+2 more)
backend/scripts/: benchmark_financeiro_pages.py  compare_financeiro_benchmark.py
backend/seed/: README.md  assets.json
backend/tests/: analysis_test_helpers.py  conftest.py  test_analysis_engine.py  test_analysis_http.py  test_analysis_methodology_service.py  test_annual_ir_report.py  test_assets.py  test_assets_bulk.py  test_assets_http.py  test_budget_api.py  test_budget_categories.py  test_budget_engine.py  test_budget_isolation.py  test_crypto_fee_engine.py  test_crypto_fees_http.py  test_crypto_strategy.py  test_data_export_import.py  test_db_unified_migration.py  test_dividend_payments.py  test_dividend_payments_bulk.py  test_dividend_payments_http.py  test_dividend_payments_migration.py  test_fx_http.py  test_health.py  test_import_http.py  test_info_http.py  test_objective_divergence.py  test_objective_investment.py  test_objective_purpose.py  test_objectives.py  test_objectives_http.py  test_patrimony_control.py  test_patrimony_control_engine.py  test_pension_contribution_engine.py  test_portfolio_summaries.py  test_portfolios_http.py  test_property_financing_engine.py  test_property_financing_profile_migration.py  test_property_financings_http.py  test_rebalance_engine.py  (+6 more)
(+1299 files in other folders)
